# python_web_10_v2

./: .env  pyproject.toml
connection/: config.ini  config.py  connect.py  env.example  readmy
json/: authors.json
models/: models1.py
quotes_project/: readmy.md
quotes_project/app_quotes/: forms.py  models.py  urls.py  views.py
quotes_project/app_quotes/migrations/: 0001_initial.py
quotes_project/app_quotes/static/app_quotes/: style.css
quotes_project/app_quotes/templates/app_quotes/: add_author.html  add_quote.html  add_tag.html  author_detail.html  home.html  quotes_by_tag.html
quotes_project/app_users/: forms.py  urls.py  views.py
quotes_project/app_users/templates/app_users/: base.html  login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  register.html
quotes_project/quotes_project/: migration.py  settings.py  urls.py
seed/: seed.py
